--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/index.css">
 	</head>
 	<body>
-		<header>
+		<header class="site-header">
 			<h1>Nicholas' Siberian Huskies, LLC</h1>
 		</header>
 
@@ -24,9 +24,9 @@
 			</nav>
 		</div>
 
-		<h2>Mission, Value, & Integrity Statement</h2>
+		<h2 class="site-title">Mission, Value, & Integrity Statement</h2>
 
-		<section>
+		<section class="site-body">
 			<p>To breed, care for, and place our huskies with a loving
 			and adoptive companion, or family, that will take on the same
 			outlook as we the breeder. That is, to care for, love, and safely
@@ -34,7 +34,7 @@
 			the necessary qualities of their energetic lives.</p>
 			
 			<p>As added perks, not only will you receive a fellow-mate for your home, you will also receive a puppy bag, complete with:</p>
-			<ul>
+			<ul class="list">
 				<li>A small crate</li>
 				<li>A doggy carseat</li>
 				<li>A pawed birth certificate</li>
@@ -48,5 +48,10 @@
 				<li>Puppy food (5.5lbs)</li>
 			</ul>
 		</section>
+
+		<footer class="site-footer">
+			&copy Nicholas' Siberian Husky's LLC
+		</footer>
+				
 	</body>
 </html>
