--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/index.css">
 	</head>
 	<body>
-		<header>
+		<header class="site-header">
 			<h1>Nicholas' Siberian Huskies, LLC</h1>
 		</header>
 
@@ -24,7 +24,7 @@
 			</nav>
 		</div>
 
-		<section>
+		<section class="site-body">
 			<p>All of our fur babies come fully vaccinated and are AKC certified.
 			We provide the strictest love, care, and maintenance for our Siberian
 			Huskies. We welcome you to first get to know the husky of your choice
@@ -44,5 +44,9 @@
 			<p>Thank you,</p>
 			<p>Nicholas' Siberian Huskies, LLC</p>
 		</section>
+
+		<footer class="site-footer">
+			&copy Nicholas' Siberian Husky's LLC
+		</footer>
 	</body>
 </html>
