--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
 			<h1>Nicholas' Siberian Huskies, LLC</h1>
 		</header>
 
+		<hr>
+
 		<div>
 			<nav>
 				<ul>
@@ -20,13 +22,18 @@
 					<li>
 						<a class="active" href="about.html">About</a>
 					</li>
+					<li>
+						<a href="images.html">Gallery</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
 
+		<hr>
+
 		<h2 class="site-title">Mission, Value, & Integrity Statement</h2>
 
-		<section class="site-body">
+		<div class="site-body">
 			<p>To breed, care for, and place our huskies with a loving
 			and adoptive companion, or family, that will take on the same
 			outlook as we the breeder. That is, to care for, love, and safely
@@ -47,11 +54,13 @@
 				<li>A stuffed animal</li>
 				<li>Puppy food (5.5lbs)</li>
 			</ul>
-		</section>
+		</div>
+
+		<hr>
 
 		<footer class="site-footer">
 			&copy Nicholas' Siberian Husky's LLC
 		</footer>
-				
+
 	</body>
 </html>
